<resources>

    <string name="app_name" translatable="false">League Stats</string>
    <string name="riot_clause" translatable="false">LeagueStats isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</string>

    <string name="region_eune">EUNE</string>
    <string name="region_euw">EUW</string>
    <string name="region_na">NA</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="health_label">Health</string>
    <string name="attack_damage_label">Attack Damage</string>
    <string name="health_regen_label">Health regen</string>
    <string name="mana_label">Mana</string>
    <string name="range_label">Range</string>
    <string name="armor_label">Armor</string>
    <string name="mana_regen_label">Mana Regen</string>
    <string name="move_speed_label">Move. Speed</string>
    <string name="magic_resist_label">Magic Resist</string>
    <string name="attack_speed_label">Attack Speed</string>

    <string name="splash_art_description">Splash Art for Champion.</string>

    <string name="playing_as">Playing As %1$s</string>
    <string name="playing_vs">Playing Vs %1$s</string>

    <string name="summoner_name">Summoner name…</string>

    <string name="champions">champions</string>
    <string name="unknown_name">Unknown name</string>
    <string name="unknown_description">Unknown description</string>
    <string name="unknown_resource">Unknown resource</string>
    <string name="level">Level %1$d</string>
    <string name="overview">Overview</string>
    <string name="info">info</string>
    <string name="summoner">Summoner</string>
    <string name="difficulty">Difficulty</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="magic">Magic</string>
    <string name="tips">Tips</string>

    <string name="champion_name">Champion Name</string>
    <string name="champion_level">Champion Level</string>
    <string name="champion_points">Champion Points</string>
    <string name="last_played">Last Played</string>
    <string name="chest_granted">Chest Granted</string>

    <string name="summoner_spells">summoner spells</string>
    <string name="cost">cost</string>
    <string name="cooldown">cooldown</string>
    <string name="spell_description">Image spell</string>

    <string name="mastery_points">Mastery Points</string>
    <string name="match_history">Match History</string>

    <string name="check_spelling_and_region">Please check spelling and region</string>
    <string name="summoner_not_found">Summoner not found.</string>
    <string name="no_masteries_found">No masteries found.</string>
    <string name="no_matches_found">No matches found.</string>
    <string name="no_data_found">No data found.</string>

    <string name="show_items">show items</string>
    <string name="items">items</string>
    <string name="plain_text">plain text</string>
    <string name="description">description</string>
    <string name="total_gold">total gold</string>
    <string name="base_gold">base gold</string>
    <string name="recipe_cost">recipe cost</string>
    <string name="total_cost">total cost</string>
    <string name="gold_for_sale">gold for sale</string>
    <string name="recipe">recipe</string>
    <string name="builds_into">builds into</string>

    <string name="victory">victory</string>
    <string name="lose">lose</string>

    <string name="enter_summoner_name">Please enter summoner name…</string>
    <string name="search_summoner">Search summoner</string>
    <string name="search_summoner_underline"><u>search summoner…</u></string>
    <string name="action_search">Search…</string>
    <string name="action_region">region</string>
    <string name="action_settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_language_label">Language</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_label_pl">Polish</string>
    <string name="pref_language_label_en">English</string>
    <string name="pref_language_default" translatable="false">@string/pref_language_en</string>
    <string name="pref_language_en" translatable="false">en_US</string>
    <string name="pref_language_pl" translatable="false">pl_PL</string>

    <string name="image">Image</string>

    <string name="kda">%1$d/%2$d/%3$d</string>
    <string name="minions_args">%1$d minions</string>
    <string name="gold_args">%1$d gold</string>
    <string name="match_timestamp">%1$s / %2$s</string>

    <string name="bio">biography</string>
    <string name="stats">stats</string>
    <string name="spells">spells</string>
    <string name="search_champion">Search champion</string>
    <string name="skins">skins</string>

    <string name="initializing_data">Initializing data…</string>
    <string name="summoner_spell_not_found">Summoner spell not found.</string>
    <string name="champion_not_found">Champion not found.</string>
    <string name="item_not_found">Item not found.</string>
</resources>
