<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_summoner"
        android:title="@string/search_summoner"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|collapseActionView"
        app:iconifiedByDefault="false"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_region"
        android:title="@string/action_region"
        android:orderInCategory="2"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.AppCompatSpinner" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>