<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_champion_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/champion_difficulty_tv"
            style="@style/PrimaryText"
            android:text="@string/difficulty" />

        <ProgressBar
            android:id="@+id/difficulty_progress_bar"
            style="@style/StatsProgressBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/champion_attack_tv"
            style="@style/PrimaryText"
            android:text="@string/attack" />

        <ProgressBar
            android:id="@+id/attack_progress_bar"
            style="@style/StatsProgressBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/champion_defense_tv"
            style="@style/PrimaryText"
            android:text="@string/defense" />

        <ProgressBar
            android:id="@+id/defense_progress_bar"
            style="@style/StatsProgressBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/champion_magic_tv"
            style="@style/PrimaryText"
            android:text="@string/magic" />

        <ProgressBar
            android:id="@+id/magic_progress_bar"
            style="@style/StatsProgressBar" />

    </LinearLayout>

</LinearLayout>