<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        tools:context=".ChampionStatsActivity">

        <ImageView
            android:id="@+id/splash_art_info_image"
            style="@style/TipsSplashArt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/statsLabelColor"
            tools:src="@drawable/ic_launcher_foreground" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/spell_recycler_view"
            style="@style/RecyclerViewStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/range_tv" />

        <TextView
            android:id="@+id/health_label_tv"
            style="@style/LabelText"
            android:text="@string/health_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_art_info_image" />

        <TextView
            android:id="@+id/attack_damage_label_tv"
            style="@style/LabelText"
            android:text="@string/attack_damage_label"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/splash_art_info_image" />

        <TextView
            android:id="@+id/health_regen_label_tv"
            style="@style/LabelText"
            android:text="@string/health_regen_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/health_tv" />

        <TextView
            android:id="@+id/mana_label_tv"
            style="@style/LabelText"
            android:text="@string/mana_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/health_regen_tv" />

        <TextView
            android:id="@+id/range_label_tv"
            style="@style/LabelText"
            android:text="@string/range_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mana_regen_tv" />

        <TextView
            android:id="@+id/armor_label_tv"
            style="@style/LabelText"
            android:text="@string/armor_label"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/magic_resist_tv" />

        <TextView
            android:id="@+id/mana_regen_label_tv"
            style="@style/LabelText"
            android:text="@string/mana_regen_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mana_tv" />

        <TextView
            android:id="@+id/move_speed_label"
            style="@style/LabelText"
            android:text="@string/move_speed_label"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/armor_tv" />

        <TextView
            android:id="@+id/magic_resist_label_tv"
            style="@style/LabelText"
            android:text="@string/magic_resist_label"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/attack_speed_tv" />

        <TextView
            android:id="@+id/attack_speed_label_tv"
            style="@style/LabelText"
            android:text="@string/attack_speed_label"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/attack_damage_tv" />

        <TextView
            android:id="@+id/health_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/health_label_tv"
            tools:text="520" />

        <TextView
            android:id="@+id/health_regen_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/health_regen_label_tv"
            tools:text="6.25" />

        <TextView
            android:id="@+id/mana_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mana_label_tv"
            tools:text="427" />

        <TextView
            android:id="@+id/range_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/range_label_tv"
            tools:text="625" />

        <TextView
            android:id="@+id/armor_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/armor_label_tv"
            tools:text="30" />

        <TextView
            android:id="@+id/mana_regen_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mana_regen_label_tv"
            tools:text="0" />

        <TextView
            android:id="@+id/move_speed_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/move_speed_label"
            tools:text="350" />

        <TextView
            android:id="@+id/attack_damage_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/attack_damage_label_tv"
            tools:text="70" />

        <TextView
            android:id="@+id/magic_resist_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/magic_resist_label_tv"
            tools:text="32" />

        <TextView
            android:id="@+id/attack_speed_tv"
            style="@style/BoldText"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/attack_speed_label_tv"
            tools:text="0.651" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>