<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ChampionStatsActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/splash_art_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/spell_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/range_tv" />

        <TextView
            android:id="@+id/health_label_tv"
            style="@style/StatsLabel"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/health_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_art_recycler_view" />

        <TextView
            android:id="@+id/attack_damage_label_tv"
            style="@style/StatsLabel"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/attack_damage_label"
            app:layout_constraintEnd_toStartOf="@+id/attack_damage_tv"
            app:layout_constraintTop_toBottomOf="@+id/splash_art_recycler_view" />

        <TextView
            android:id="@+id/health_regen_label_tv"
            style="@style/StatsLabel"
            android:text="@string/health_regen_label"
            app:layout_constraintStart_toStartOf="@+id/health_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/health_label_tv" />

        <TextView
            android:id="@+id/mana_label_tv"
            style="@style/StatsLabel"
            android:text="@string/mana_label"
            app:layout_constraintStart_toStartOf="@+id/health_regen_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/health_regen_label_tv" />

        <TextView
            android:id="@+id/range_label_tv"
            style="@style/StatsLabel"
            android:text="@string/range_label"
            app:layout_constraintStart_toStartOf="@+id/mana_regen_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/mana_regen_label_tv" />

        <TextView
            android:id="@+id/armor_label_tv"
            style="@style/StatsLabel"
            android:text="@string/armor_label"
            app:layout_constraintStart_toStartOf="@+id/magic_resist_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/magic_resist_label_tv" />

        <TextView
            android:id="@+id/mana_regen_label_tv"
            style="@style/StatsLabel"
            android:text="@string/mana_regen_label"
            app:layout_constraintStart_toStartOf="@+id/mana_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/mana_label_tv" />

        <TextView
            android:id="@+id/move_speed_label"
            style="@style/StatsLabel"
            android:text="@string/move_speed_label"
            app:layout_constraintStart_toStartOf="@+id/armor_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/armor_label_tv" />

        <TextView
            android:id="@+id/magic_resist_label_tv"
            style="@style/StatsLabel"
            android:text="@string/magic_resist_label"
            app:layout_constraintStart_toStartOf="@+id/attack_speed_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/attack_speed_label_tv" />

        <TextView
            android:id="@+id/attack_speed_label_tv"
            style="@style/StatsLabel"
            android:text="@string/attack_speed_label"
            app:layout_constraintStart_toStartOf="@+id/attack_damage_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/attack_damage_label_tv" />

        <TextView
            android:id="@+id/health_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/health_label_tv"
            app:layout_constraintEnd_toStartOf="@+id/attack_damage_label_tv"
            app:layout_constraintStart_toEndOf="@+id/health_label_tv"
            app:layout_constraintTop_toTopOf="@+id/health_label_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="520" />

        <TextView
            android:id="@+id/health_regen_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/health_regen_label_tv"
            app:layout_constraintEnd_toEndOf="@+id/health_tv"
            app:layout_constraintStart_toStartOf="@+id/health_tv"
            app:layout_constraintTop_toTopOf="@+id/health_regen_label_tv"
            tools:text="6.25" />

        <TextView
            android:id="@+id/mana_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/mana_label_tv"
            app:layout_constraintEnd_toEndOf="@+id/health_regen_tv"
            app:layout_constraintStart_toStartOf="@+id/health_regen_tv"
            app:layout_constraintTop_toTopOf="@+id/mana_label_tv"
            tools:text="427" />

        <TextView
            android:id="@+id/range_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/range_label_tv"
            app:layout_constraintEnd_toEndOf="@+id/mana_regen_tv"
            app:layout_constraintStart_toStartOf="@+id/mana_regen_tv"
            app:layout_constraintTop_toTopOf="@+id/range_label_tv"
            tools:text="625" />

        <TextView
            android:id="@+id/armor_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/armor_label_tv"
            app:layout_constraintEnd_toEndOf="@+id/magic_resist_tv"
            app:layout_constraintTop_toTopOf="@+id/armor_label_tv"
            tools:text="30" />

        <TextView
            android:id="@+id/mana_regen_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/mana_regen_label_tv"
            app:layout_constraintEnd_toEndOf="@+id/mana_tv"
            app:layout_constraintStart_toStartOf="@+id/mana_tv"
            app:layout_constraintTop_toTopOf="@+id/mana_regen_label_tv"
            tools:text="0" />

        <TextView
            android:id="@+id/move_speed_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/move_speed_label"
            app:layout_constraintEnd_toEndOf="@+id/armor_tv"
            app:layout_constraintTop_toTopOf="@+id/move_speed_label"
            app:layout_constraintVertical_bias="1.0"
            tools:text="350" />

        <TextView
            android:id="@+id/attack_damage_tv"
            style="@style/StatsText"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/attack_damage_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/attack_damage_label_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="70" />

        <TextView
            android:id="@+id/magic_resist_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/magic_resist_label_tv"
            app:layout_constraintEnd_toEndOf="@+id/attack_speed_tv"
            app:layout_constraintTop_toTopOf="@+id/magic_resist_label_tv"
            app:layout_constraintVertical_bias="1.0"
            tools:text="32" />

        <TextView
            android:id="@+id/attack_speed_tv"
            style="@style/StatsText"
            app:layout_constraintBottom_toBottomOf="@+id/attack_speed_label_tv"
            app:layout_constraintEnd_toEndOf="@+id/attack_damage_tv"
            app:layout_constraintTop_toTopOf="@+id/attack_speed_label_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="0.651" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>