<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="champion_name_label_tv, champion_level_label_tv, champion_points_label_tv, last_played_label_tv, chest_granted_label_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/champion_thumbnail"
        style="@style/SmallImageThumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="100dp"
        tools:layout_width="100dp" />

    <TextView
        android:id="@+id/champion_name_label_tv"
        style="@style/LabelText"
        android:text="@string/champion_name"
        app:layout_constraintStart_toEndOf="@+id/champion_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/champion_name_tv"
        style="@style/BoldText"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/champion_name_label_tv"
        tools:text="Riven" />

    <TextView
        android:id="@+id/champion_level_label_tv"
        style="@style/LabelText"
        android:text="@string/champion_level"
        app:layout_constraintStart_toEndOf="@+id/champion_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/champion_name_label_tv" />

    <TextView
        android:id="@+id/champion_level_tv"
        style="@style/BoldText"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/champion_level_label_tv"
        tools:text="5" />

    <TextView
        android:id="@+id/champion_points_label_tv"
        style="@style/LabelText"
        android:text="@string/champion_points"
        app:layout_constraintStart_toEndOf="@+id/champion_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/champion_level_label_tv" />

    <TextView
        android:id="@+id/champion_points_tv"
        style="@style/BoldText"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/champion_points_label_tv"
        tools:text="2325425425" />

    <TextView
        android:id="@+id/last_played_label_tv"
        style="@style/LabelText"
        android:text="@string/last_played"
        app:layout_constraintStart_toEndOf="@+id/champion_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/champion_points_label_tv" />

    <TextView
        android:id="@+id/last_played_tv"
        style="@style/BoldText"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/last_played_label_tv"
        tools:text="12:34" />

    <TextView
        android:id="@+id/chest_granted_label_tv"
        style="@style/LabelText"
        android:text="@string/chest_granted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/champion_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/last_played_tv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/chest_granted_tv"
        style="@style/BoldText"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/chest_granted_label_tv"
        tools:text="Yes" />

</android.support.constraint.ConstraintLayout>